# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: project-check.yml
page_loader/: __init__.py  cli.py  loader.py  logger.py  page_processor.py  request.py  storage.py
page_loader/scripts/: page_loader.py
tests/: test_loader.py
tests/fixtures/: expected_web_page.html  web_page.html
tests/fixtures/assets/: runtime.js
