[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["sAnton"]
packages = [
    { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"
progress = "^1.5"

[tool.poetry.dev-dependencies]
requests-mock = "^1.8.0"
coverage = "^6.3.1"
pytest = "^7.0.0"
flake8 = "^4.0.1"

[tool.poetry.scripts]
page-loader="page_loader.scripts.page_loader:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
